changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

PeterM  2000/11/18:
  New spells added:
  1)  Sanctuary   (aura of counterwall)
  2)  Peace	  (make monsters unable to fight)
  3)  Spiderweb   (create spider webs)
  4)  rage	  (heroism, armour, haste, regenration combined)
  5)  forked lightning  (lightning which forks and strikes )
  6)  flaming aura  (aura of fire)
  7)  vitriol     combined ball/cone/pool acid attack spell
  8)  vitriol splash  (spell for internal use only)
  9)  ironwood skin  (clerical version of armour spell)

Not implemented:  10) poison fog

MSW 2000/11/17:
socket/metaserver.c:  More changes - use fcntl to set O_NONBLOCK.  Don't
   close socket if connect fails, since with sendto it is not required
   that the connect works.

PeterM:  2000/11/17
define.h spells.h spellist.h spell_util.c spell_effect.c:
  windstorm spell implemented.
attack.c:  saving throw behavior modified.  Items take a bit
of DAM to destroy now instead of being destroyed with 1hp attacks.

MSW: 2000/11/16:
socket/metaserver.c: Add #ifdef MSG_DONTWAIT into metaserver.c for systems 
	that lack that definition.
random_maps/style.c: alphasort was not properly de-referencing pointers
	when doing name comparisons, and thus returned garbage results,
	resulting in a crash when entering random maps.  This only happens
	for systems which lack scandir in normal libraries (like Solaris).
	BSDs and linux have scandir built in, and did not have a problem.
server/disease.c: fix infect_object - server would crash if player did
	not have praying skill and was infecting someone else.
end of changes, MSW 2000/11/16

PeterM : 2000/11/14